domainmodule/src/main/java/com/example/domainmodule/errors/ExecutionError.kt
package com.example.domainmodule.errors

sealed class ExecutionError(message: String) : Throwable(message) {
    class WithMessage(customMessage: String) : ExecutionError(customMessage)
}